--- a/index.ipynb
+++ b/index.ipynb
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
        "4.123105625617661"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,21 +1254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[0.0,\n",
-       " 5.830951894845301,\n",
+       " 4.242640687119285,\n",
        " 1.0,\n",
        " 5.385164807134504,\n",
-       " 7.280109889280518,\n",
+       " 2.23606797749979,\n",
        " 4.123105625617661]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
        "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,20 +1349,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'distance_with_neighbor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-f09fa08827e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdistance_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# [{'avenue': 1, 'distance': 4.242640687119285, 'name': 'Suzie', 'street': 11},\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#  {'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#  {'avenue': 6, 'distance': 5.385164807134504, 'name': 'Edgar', 'street': 13},\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-523b367e7b5c>\u001b[0m in \u001b[0;36mdistance_all\u001b[0;34m(first_neighbor, neighbors)\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mneighbor\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mfirst_neighbor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnew_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance_with_neighbor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_neighbor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneighbor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnew_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'distance_with_neighbor' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1384,11 +1386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-cfef7745798a>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-cfef7745798a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def nearest_neighbors(first_neighbor, neighbors, number)\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number)\n",
     "    distance_all(first_neighbor, neighbors)\n",
