Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1401,7 +1401,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number)\n",
     "    distance_all(first_neighbor, neighbors)\n",
-    "    return new_list"
+    "    return "
    ]
   },
   {
