--- a/index.ipynb
+++ b/index.ipynb
@@ -1401,7 +1401,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number)\n",
     "    distance_all(first_neighbor, neighbors)\n",
-    "    return sorted(new_list, lambda i:)"
+    "    return sorted(new_list, lambda i: i[distance])[number]"
    ]
   },
   {
