Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1386,19 +1386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
-    "    \n",
-    "    distance_all(first_neighbor, neighbors)\n",
-    "    "
+    "    for neighbor in neighbors:\n",
+    "        distance_all(first_neighbor, neighbors)\n",
+    "    re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
