Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1391,7 +1391,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
-    "    return distance_all(first_neighbor, neighbors)"
+    "    new_list = distance_all(first_neighbor, neighbors)\n",
+    "    return"
    ]
   },
   {
