Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1386,13 +1386,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-40-3d5e8d317167>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-3d5e8d317167>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return = sorted(new_list, key = lambda i: i['distance'])[number]\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
     "    new_list = distance_all(first_neighbor, neighbors)\n",
-    "    return = sorted(lis, key = lambda i: i['age'])[number]"
+    "    return = sorted(new_list, key = lambda i: i['distance'])[number]"
    ]
   },
   {
