Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1392,7 +1392,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
     "    new_list = distance_all(first_neighbor, neighbors)\n",
-    "    return sorted(new_list, key = lambda i: i['distance'])"
+    "    sorted_list = sorted(new_list, key = lambda i: i['distance'])\n",
+    "    return sorted"
    ]
   },
   {
