Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1393,7 +1393,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
     "    new_list = distance_all(first_neighbor, neighbors)\n",
     "    sorted_list = sorted(new_list, key = lambda i: i['distance'])\n",
-    "    return sorted"
+    "    return sorted_list"
    ]
   },
   {
